# data-pipe

./: .gitignore  config.py  default-settings.yaml  pyproject.toml
app/: __init__.py  base.py  combiner.py  inlet.py  memory.py  outlet.py  repo_manager.py  transformer.py  utils.py
app/pipe/: __init__.py  base.py  combiner.py  inlet.py  outlet.py  pieces.py  pipe.py  transformer.py
app/pipe/builtin/: __init__.py  combiners.py  inlets.py  outlets.py  transformers.py
app/settings/: __init__.py  db.py  manager.py  required.py
tests/: conftest.py  test-pipe-config.yaml  test-settings.yaml  test_combiners.py  test_inlets.py  test_outlets.py  test_pipe.py  test_repo.py  test_settings.py  test_transformers.py
tests/test_imports/: pipe_inlets.py
