[tool.poetry]
name = "data-pipe"
version = "0.1.0"
description = ""
authors = ["James Innes <james.innes@echonet.io>"]
readme = "README.md"
packages = [{include = "data_pipe"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.3"


[tool.poetry.group.dev.dependencies]
pyreadline3 = "^3.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
