[tool.poetry]
name = "data-pipe"
version = "0.1.0"
description = ""
authors = ["James Innes <james.innes@echonet.io>"]
readme = "README.md"
packages = [{include = "data_pipe"}]

[tool.poetry.dependencies]
python = ">=3.10"
pandas = "^1.5.3"
gitpython = "^3.1.31"
sqlalchemy = "^2.0.4"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pyreadline3 = "^3.4.1"
pytest = "^7.2.2"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
